--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
 
     <string name="menu_pregled">Pregled</string>
     <string name="menu_grafi">Grafi</string>
+    <string name="text_temp">text_temp</string>
 </resources>
